@@ -2,16 +2,12 @@ package com.tutti.server.core.review.application;
 
 import com.tutti.server.core.review.domain.Review;
 import com.tutti.server.core.review.infrastructure.ReviewRepository;
-import com.tutti.server.core.review.payload.request.ReviewListRequest;
 import com.tutti.server.core.review.payload.response.ReviewListResponse;
 import com.tutti.server.core.review.payload.response.ReviewResponse;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -23,42 +19,42 @@ public class ReviewListServiceImpl implements ReviewListService {
 
     @Override
     @Transactional(readOnly = true)
-    public ReviewListResponse getReviews(ReviewListRequest request) {
-        return getReviewsWithPagination(
-            request.productId(),
-            Optional.ofNullable(request.size()).orElse(20),
-            request.sort(),
-            request.nextCursor()
-        );
-    }
+    public ReviewListResponse getReviewsByProductId(Long productId, Long cursor, int size,
+        String sort) {
+        final PageRequest pageRequest = PageRequest.of(0, size);
+        List<Review> reviews = getReviews(productId, cursor, sort, pageRequest);
 
-    @Override
-    @Transactional(readOnly = true)
-    public ReviewListResponse getReviewsWithPagination(Long productId, Integer size, String sort,
-        String nextCursor) {
-        Long cursorId = (nextCursor != null && !nextCursor.isEmpty()) ? Long.parseLong(nextCursor)
-            : Long.MAX_VALUE;
-
-        Pageable pageable = PageRequest.of(0, size + 1, getSort(sort));
-        List<Review> reviews = reviewRepository.findReviewsByProductIdAndCursor(productId, cursorId,
-            pageable);
-
-        String nextCursorValue =
-            (reviews.size() > size) ? String.valueOf(reviews.get(size).getId()) : null;
+        Long nextCursor = reviews.stream()
+            .reduce((first, second) -> second)
+            .map(Review::getId)
+            .orElse(null);
 
         List<ReviewResponse> reviewResponses = reviews.stream()
-            .limit(size)
             .map(ReviewResponse::from)
-            .collect(Collectors.toList());
+            .toList();
 
-        return new ReviewListResponse(reviewResponses, nextCursorValue);
+        return new ReviewListResponse(reviewResponses, nextCursor);
     }
 
-    private Sort getSort(String sort) {
-        return switch (sort.toLowerCase()) {
-            case "rating_desc" -> Sort.by(Sort.Order.desc("rating"));
-            case "like_desc" -> Sort.by(Sort.Order.desc("likeCount"));
-            default -> Sort.by(Sort.Order.desc("createdAt")); // 기본값: 최신순
+    private List<Review> getReviews(Long productId, Long cursor, String sort,
+        PageRequest pageRequest) {
+        return switch (sort) {
+            case "rating_desc" -> Optional.ofNullable(cursor)
+                .map(c -> reviewRepository.findNextReviewsByProductOrderByRatingDesc(productId, c,
+                    pageRequest))
+                .orElseGet(
+                    () -> reviewRepository.findFirstReviewsByProductOrderByRatingDesc(productId,
+                        pageRequest));
+            case "like_desc" -> Optional.ofNullable(cursor)
+                .map(c -> reviewRepository.findNextReviewsByProductOrderByLikeDesc(productId, c,
+                    pageRequest))
+                .orElseGet(
+                    () -> reviewRepository.findFirstReviewsByProductOrderByLikeDesc(productId,
+                        pageRequest));
+            default -> Optional.ofNullable(cursor)
+                .map(c -> reviewRepository.findNextReviewsByProduct(productId, c, pageRequest))
+                .orElseGet(
+                    () -> reviewRepository.findFirstReviewsByProduct(productId, pageRequest));
         };
     }
 }
